# aoc-rust

./: Cargo.toml
src/: lib.rs
src/utils/: mod.rs
src/years/: mod.rs
src/years/y2021/: day01.rs  day02.rs
src/years/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
