[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/bin/aoc.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
termion = "*"
itertools = "*"
regex = "1.5.4"
lazy_static = "1.4.0"